--- a/templates/pokemon.html
+++ b/templates/pokemon.html
@@ -6,6 +6,9 @@
     <title>Pokemon</title>
 </head>
 <body>
+    <a href="/delete/{{id}}">
+        Deletar Pokémon
+    </a>
     <h1>Nome: {{pokemon[0]}}</h1>
     <img src={{pokemon[1]}} />
 </body>
