--- a/templates/pokemon.html
+++ b/templates/pokemon.html
@@ -6,10 +6,7 @@
     <title>Pokemon</title>
 </head>
 <body>
-    <a href="/delete/{{id}}">
-        Deletar Pokémon
-    </a>
-    <h1>Nome: {{pokemon[0]}}</h1>
-    <img src={{pokemon[1]}} />
+    <h1>Nome: {{pokemon['name']}}</h1>
+    <img src={{pokemon['image']}} />
 </body>
 </html>
