--- a/templates/index.html
+++ b/templates/index.html
@@ -5,32 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ titulo }}</title>
 
-    <style>
-        * { margin: 0; padding: 0; }
-        body {
-            display: flex;
-            min-height: 100vh;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-        .pokemon {
-            width: 150px;
-            height: 170px;
-            text-align: center;
-            background-color: #ddd;
-            border: 1px solid #777;
-            border-radius: 5px;
-            padding: 20px;
-        }
-        .pokemon img {
-            width: 100%;
-        }
-        .add-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
     <a class='add-btn' href='/add'>
